Purpose: Small bug fix (#203 in Bugzilla)
Description: INSTALL file in 1.7 branch had old information about
             the minimum set of header files that should be installed

Solution: Fixed

Platforms tested: N/A

Misc. update:

--- a/release_docs/INSTALL
+++ b/release_docs/INSTALL
@@ -554,7 +554,9 @@
 		./src/.libs/libhdf5.a
 
 	    The public header files:
-		./src/H5*public.h
+		./src/H5*public.h, ./src/H5public.h
+                ./src/H5FD*.h except ./src/H5FDprivate.h,
+                ./src/H5api_adpt.h
 
 	    The main header file:
 		./src/hdf5.h
